assets/css/overrides.css
body {
  color: #250520;
  /* background-color: #6AD1DD; */
  /* background-color: #250520; */
  background-color: #FFF;
}

a {
  color: #FF3C7C;
  /* text-decoration: none;
  transition: 0.5s; */
}

a:hover,
a:active,
a:focus {
  color: #FFB0CA
    /* outline: none; */
    /* text-decoration: none; */
}

#header #logo h1 a,
#header #logo h1 a:hover {
  color: #250520;
}

#header.header-scrolled {
  background-color: #250520;
}

#header.header-scrolled #logo h1 a,
#header #logo h1 a:hover {
  color: #87EDB9;
}

h1 {
  font-family: "countach", sans-serif !important;
  font-weight: 700;
  font-style: normal;
  color: #250520 !important;
}

h2 {
  color: #87EDB9;

}

h3 {
  color: #FF3C7C
}

.navbar a:hover,
.navbar .active,
.navbar .active:focus,
.navbar li:hover>a {
  color: #FF3C7C;
}

.navbar a,
.navbar a:focus {
  /* display: flex;
  align-items: center;
  justify-content: space-between; */
  color: #250520
    /* rgba(202, 206, 221, 0.8); */
    /* font-family: "Raleway", sans-serif;
  font-weight: 600;
  font-size: 14px;
  white-space: nowrap;
  transition: 0.3s;
  position: relative;
  padding: 6px 4px; */
}

.navbar>ul>li>a:before {
  /* content: "";
  position: absolute;
  width: 0;
  height: 2px;
  bottom: -6px;
  left: 0; */
  background-color: #FF3C7C;
  /* visibility: hidden;
  transition: all 0.3s ease-in-out 0s; */
}


.header-scrolled .navbar a:hover,
.header-scrolled .navbar .active,
.header-scrolled .navbar .active:focus,
.header-scrolled .navbar li:hover>a {
  color: #87EDB9;
}

.header-scrolled .navbar a {
  color: #FFF;
}

.mobile-nav-toggle {
  color: #250520 !important;
}

.header-scrolled .mobile-nav-toggle {
  color: #FFF !important;
}

.navbar-mobile a,
.navbar-mobile a:focus {
  /* padding: 10px 20px;
  font-size: 15px; */
  color: #250520 !important;
}



.navbar-mobile a:hover,
.navbar-mobile .active,
.navbar-mobile li:hover>a {
  color: #FF3C7C !important;
}



#hero {
  background-image: url("../img/fnd2026-bg-horizontal.jpg");
  background-color: initial;
}

@media (max-width: 768px) {
  #hero {
    background-image: url("../img/fnd2026-bg-vertical.jpg");
    background-position: center;
  }
}

#hero:before {
  background: initial;
}

#hero h1.hero-big {
  font-size: 750%;
  -webkit-text-stroke: 2px #87edb9;
  /* text-stroke: 2px #87edb9; */
}

@media (max-width: 991px) {
  #hero h1.hero-big {
    font-size: 600%;
    /* -webkit-text-stroke: 2px #87edb9; */
    /* text-stroke: 2px #87edb9; */
  }
}

#hero h1 span {
  color: #FF3C7C;
}

#hero p span {
  white-space: nowrap;
}

#hero p {
  color: #FFFFFF;
  background-color: #FF3C7C;
  font-weight: 700;
  font-size: 20px;
  border-radius: 20px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: 10px 20px !important;

}

#hero .about-btn {
  /* font-family: "Raleway", sans-serif;
  font-weight: 500;
  font-size: 14px;
  letter-spacing: 1px;
  display: inline-block;
  padding: 12px 32px;
  border-radius: 50px;
  transition: 0.5s;
  line-height: 1;
  margin: 10px;
  color: #fff;
  animation-delay: 0.8s; */
  border: 2px solid #FF3C7C;
}

#hero .about-btn:hover {
  background: #FF3C7C;
  color: #fff;
}


#about {
  /* background: url("../img/fnd2026.jpg"); */
  /* background-size: cover;
  overflow: hidden;
  position: relative;
  color: #fff;
  padding: 60px 0 40px 0; */
}

#about h2 {
  font-size: 36px;
  font-weight: bold;
  margin-bottom: 10px;
  color: #87EDB9;
}




.back-to-top {
  /* position: fixed;
  visibility: hidden;
  opacity: 0;
  right: 15px;
  bottom: 15px;
  z-index: 996; */
  background: #FF3C7C;
  /* width: 40px;
  height: 40px;
  border-radius: 50px;
  transition: all 0.4s; */
}

#schedule .schedule-item h4 {
  color: #FF3C7C;
}

#schedule .schedule-item p {
  color: #250520;
  margin-left: 1em;
  margin-bottom: 0;
  font-style: normal;
}


.section-header::before {
  /* content: "";
  position: absolute;
  display: block;
  width: 60px;
  height: 5px; */
  background: #FF3C7C;
  /* bottom: 0;
  left: calc(50% - 25px); */
}

#activitats {
  padding-top: 60px;
  background-color: #f6f7fd;
}


#venue .venue-info ul {
  /* font-size: 36px; */
  /* font-weight: 700; */
  /* color: #FFB0CA; */
  color: #FFF;
}

#venue .venue-info ul {
  list-style-type: none;
}

#venue .venue-info ul>li>i {
  /* font-size: 36px; */
  /* font-weight: 700; */
  /* color: #FFB0CA; */
  color: #87EDB9;
}


#contact .contact-phone {
  border-left: none;
}

#contact .contact-instagram {
  margin-bottom: 20px;
}

#contact .contact-twitter {
  margin-bottom: 20px;
}

@media (min-width: 768px) {
  #contact .contact-instagram {
    border-right: 1px solid #ddd;
    padding: 20px 0;
  }
}

@media (min-width: 768px) {
  #contact .contact-twitter {
    border-right: 1px solid #ddd;
    padding: 20px 0;
  }
}

#footer .footer-logo h1 {
  text-transform: uppercase;
  color: #FFF !important;
  font-size: 36px;
  font-weight: 700;
  letter-spacing: 3px;
}

#footer .footer-logo h1 img {
  margin-right: 10px;
}

#footer .footer-top h4 {
  /* font-size: 14px;
  font-weight: bold;
  color: #fff;
  text-transform: uppercase;
  position: relative;
  padding-bottom: 12px; */
  border-bottom: 2px solid #FF3C7C;
}

#footer .footer-top .footer-links ul i {
  /* padding-right: 5px; */
  color: #FF3C7C;
  /* font-size: 18px; */
}

#footer .footer-top .footer-links ul a:hover {
  color: #87EDB9;
}

#footer .footer-top .social-links a:hover {
  background: #FF3C7C;
  color: #fff;
}

#supporters .supporter-logo {
  background-color: white;
}

#supporters .supporter-logo img {
  filter: grayscale(1);
}

#supporters .supporter-logo:hover img {
  filter: none;
}

#supporters .supporter-logo:hover img {
  transform: scale(1.4);
}

#supporters .supporter-logo.tag-editorial a::before {
  content: "editorial";
  float: right;
  display: block;
  position: relative;
  height: 1em;
  margin-bottom: -1em;
  line-height: 1em;
  z-index: 1000;
  text-transform: uppercase;
  background-color: #FFB0CA;
  color: white;
  font-size: small;
  padding: 0 2px
}

#supporters .supporter-logo.tag-botiga a::before {
  content: "botiga";
  float: right;
  display: block;
  position: relative;
  height: 1em;
  margin-bottom: -1em;
  line-height: 1em;
  z-index: 1000;
  text-transform: uppercase;
  background-color: #FFB0CA;
  color: white;
  font-size: small;
  padding: 0 2px
}

#supporters .supporter-logo.tag-entitat a::before {
  content: "entitat";
  float: right;
  display: block;
  position: relative;
  height: 1em;
  margin-bottom: -1em;
  line-height: 1em;
  z-index: 1000;
  text-transform: uppercase;
  background-color: #FFB0CA;
  color: white;
  font-size: small;
  padding: 0 2px
}




#contact .contact-info i {
  /* font-size: 48px;
  display: inline-block;
  margin-bottom: 10px; */
  color: #87EDB9;
}

#contact .contact-info h3 {
  /* font-size: 18px;
  margin-bottom: 15px;
  font-weight: bold;
  text-transform: uppercase; */
  color: #87EDB9;
}

#contact .contact-info a {
  color: #FF3C7C;
}

#contact .contact-info a:hover,
#contact .contact-info a:active {
  color: #FFB0CA;
}



#faq .faq-list .collapsed:hover {
  color: #FF3C7C;
}

#faq .faq-list .question {
  /* display: block;
  position: relative;
  font-family: #f82249;
  font-size: 18px;
  line-height: 24px;
  font-weight: 400;
  padding-left: 25px;
  cursor: pointer; */
  color: #FF3C7C;
  /* transition: 0.3s; */
}

#faq .faq-list .collapsed {
  color: #250520;
}


#gallery .big-number {
  display: block;
  font-size: 300%;
  color: #FF3C7C;
  font-weight: 800;
  margin-bottom: -10px;
  width: 100%;
  text-align: center;
  /* width: 100%; */
}

#gallery .number-details {
  display: block;
  width: 100%;
  text-align: center;
  color: #9195a2;
  /* font-size: 300%;
  color: #FF3C7C;
  font-weight: 800;
  margin-bottom: -10px; */
}





/* ==== */



#programDetails {
  margin-top: 2em;
}


#programDetails>table>thead>tr>th {
  text-align: center;
  vertical-align: top;
  font-size: 15px;
}

#programDetails>table>thead>tr>th>span {
  font-size: 0.8em;
  display: block;
  font-weight: normal;
}

#programDetails>table>tbody>tr>td {
  text-align: center;
  vertical-align: middle;
  font-weight: bold;
}

#programDetails>table>tbody>tr {
  height: 3em;
}

#programDetails>table>tbody>tr>th {
  min-width: 8em;
  width: 8%;
}

#programDetails>table>tbody>tr>td {
  min-width: 11em;
  font-size: 15px;
  max-width: 10%;
}

#programDetails>table>tbody>tr>td>span {
  font-size: 0.8em;
  font-weight: normal;
  display: block;
  /* max-width: 12vw; */
}

#programDetails>table>tbody>tr>td>span.location {
  font-size: 0.7em;
  font-style: normal;
  display: block;
  text-align: right;
  font-weight: bold;
  opacity: 0.6;
  margin-top: 0;
  margin-bottom: 0;
}

#programDetails>table>tbody>tr>td>span.age-limit {
  opacity: 0.6;  
}

#programDetails>table>tbody>tr>td>span.interested {
  margin-top: 10px;
  /* font-weight: bold; */
  font-style: italic;
}

#programDetails>table>tbody>tr>td>span.interested > a {
  /* color: black !important; */
  font-weight: bold;
}

#programDetails>table>tbody>tr>td:empty {
  background-color: #f6f7fd;
}

#programDetails>table>tbody>tr.global-event>th {
  background-color: #f6f6de;
}

#programDetails>table>tbody>tr.global-event>td {
  background-color: #f6f6de;
  font-style: italic;
}

#programDetails td img {
  /* max-width: 100%; */
  /* max-height: 3.5em; */
  /* max-height: 1.4em; */
  /* height: 3em; */
  /* height: 2.3em; */
  /* max-width: 40%; */
  /* max-width: 44%; */
  object-fit: contain;
  display: inline-block;
  margin-top: 10px;
  margin-left: 4px;
  margin-right: 4px;
  width:3.7em;
  height: 3.7em;
  /* background-color: #ffffff60; */
  background-color: white;
  padding: 3px;
  border-radius: 18%;

}

#programDetails ul {
  margin-top: 10px;
  margin-bottom: 0px;
}

#programDetails ul li {
  font-size: 12px;
  text-align: left;
  margin-bottom: 0px;
  font-weight: normal;
}

/* 
#programDetails, #programDetails td, #programDetails th{
  border: 1px solid red;
} */

/*  COLORFUL VERSION */

#programDetails>table>tbody>tr.global-event>th {
  background-color: #fcfcdc3e;
  opacity: 0.5;
}

#programDetails>table>tbody>tr.global-event>td {
  background-color: #fcfcdc3e;
  opacity: 0.5;
}

#programDetails>table>tbody>tr>td:empty {
  background-color: #ffffff;
}

.editorials {
  background-color: coral !important;
}

.familiars {
  background-color: #0bc60b9b !important;
}

.euros {
  background-color: lightskyblue !important;
}

.tallers {
  background-color: #c1f3b89b !important;
}

.torneigs {
  background-color: #eea3ea9b !important;
}

#programDetails>table>tbody>tr.rifa-event>th,
#programDetails>table>tbody>tr.rifa-event>td {
  background-color: white;
  font-weight: bold;
  text-align: center;
  vertical-align: middle;
}

.torneigs a {
  color: black !important;
}

.ameritrash {
  background-color: #fba7409b !important;
}

.botigues {
  background-color: #fbe2409b !important;
}

.exterior {
  background-color: #0d85009b !important;
}

.prototips {
  background-color: lightcyan !important;
}

.rol {
  background-color: #c1f3b89b !important;
}

/* Hide all supporter logos except marked ones */
.supporters-wrap .col-lg-3.d-none-temp {
  display: none;
}

